Fixed base template tables

--- a/wayf/templates/base.html
+++ b/wayf/templates/base.html
@@ -92,6 +92,9 @@
 </div><!-- /rbroundbox -->
 <tr><td class="break">&nbsp;</td></tr>
 </td></tr>
+</td>
+</tr>
+</tbody></table></tr>
 <tr>
          <td id="corner_white_on_grey_bottomx--"><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td>
          <td class="pageContents"><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td>
