Added templates for old aai.grnet.gr static pages

--- a/wayf/templates/base.html
+++ b/wayf/templates/base.html
@@ -16,13 +16,7 @@
 	<tr>
 		<td rowspan="8" class="BGEb">&nbsp;</td>
 		<td rowspan="8" valign="top">
-			<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tbody>
-				<tr><td height="57"><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td></tr>
-				<tr><td><a href="http://www.grnet.gr/"><img src="/static/images/tab_grnet.gif" alt="GRNET.GR" title="GRNET.GR" border="0" height="131" width="13"></a></td></tr>
-				<tr><td><a href="http://shibboleth.grnet.gr/"><img src="/static/images/tab_shibb.gif" alt="shibboleth.grnet.gr" title="shibboleth.grnet.gr" border="0" height="135" width="14"></a></td></tr>
-			</tbody>
-			</table>
+		&nbsp;
 		</td>
 		<td colspan="3" id="topStrip"><img src="/static/images/s.gif" height="1" width="700" alt="divider" title="divider"></td>
 		<td rowspan="8" ><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td>
@@ -70,8 +64,8 @@
 										<td valign="top"><a href="http://www.grnet.gr" target="_blank"><img src="/static/images/grnet.gif" border="0" width="85" height="94" alt="GRNET" title="GRNET"></a></td>
 										<td width="100%" valign="top">
 											<table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
-												<tr><td height="100%" valign="top" bgcolor="#D6D3D3"><div class="greyheader"><a style="text-decoration:none" href="http://shibboleth.grnet.gr">{% trans "GRNET Federation,<br />Authentication & Authorization Infrastructure" %}</a></div></td></tr>
-												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" >::<a href="http://shibboleth.grnet.gr/faq.html">{% trans "FAQ" %}</a> ::<a href="http://shibboleth.grnet.gr/help.html">{% trans "Help" %}</a> ::<a href="http://shibboleth.grnet.gr/privacy.html">{% trans "Privacy" %}</a></div></td></tr>
+												<tr><td height="100%" valign="top" bgcolor="#D6D3D3"><div class="greyheader"><a style="text-decoration:none" href="/">{% trans "GRNET Federation,<br />Authentication & Authorization Infrastructure" %}</a></div></td></tr>
+												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="/support">{% trans "User support" %}</a> ::<a href="/faq">{% trans "FAQ" %}</a> ::<a href="/help">{% trans "Help" %}</a> ::<a href="/privacy">{% trans "Privacy" %}</a></div></td></tr>
 											</table>
 										</td>
 									</tr>
