--- a/wayf/templates/index.html
+++ b/wayf/templates/index.html
@@ -1,4 +1,94 @@
 {% extends "base.html" %}
+{% load i18n %}
+{% block header %}{% trans "About" %}{% endblock %}
 {% block content %}
-{{ idplist|safe }}
+<img src="/static/images/Shibboleth-logo_RGB.png">
+
+<p>
+Η Υποδομή Ταυτοποίησης και Εξουσιοδότησης του ΕΔΕΤ (Authentication Authorization Infrastructure - AAI) επιτρέπει σε διαφορετικούς οργανισμούς να συνεργάζονται στην απόδοση δικαιωμάτων πρόσβασης για εφαρμογές που έχουν δι-ιδρυματικό χαρακτήρα. Η υποδομή αφορά τη λειτουργία μίας ομοσπονδίας εμπιστοσύνης μεταξύ παρόχων ταυτότητας, δηλαδή ιδρυμάτων που διατηρούν λογαριασμούς χρηστών (Identity Providers - IdP) και παρόχων υπηρεσιών (Service Providers - SP).
+</p> 
+<p>
+Η Ομοσπονδία AAI του ΕΔΕΤ αφορά κυρίως στα ακαδημαϊκά και ερευνητικά ιδρύματα της Ελλάδας και στους ενδιαφερόμενους παρόχους υπηρεσιών προς τους χρήστες τους. Ο στόχος της είναι να συντονίζει τη συνεργασία μεταξύ των φορέων και να προωθεί την ανάπτυξη υπηρεσιών δι-ιδρυματικού χαρακτήρα.
+</p>
+<p>
+Η υιοθέτηση τέτοιων υπηρεσιών από τα ιδρύματα έχει πολλαπλό όφελος για τους τελικούς χρήστες τους:
+</p>
+<ul>
+<li>	η είσοδος σε κάθε μία υπηρεσία τρίτου που επιθυμεί το άνοιγμα της σε ολόκληρη την κοινότητα δεν απαιτεί την απόκτηση ξεχωριστού λογαριασμού (δικαίωμα πρόσβασης). Αρκεί η χρήση του υπάρχοντος ιδρυματικού λογαριασμού.
+<li>	ο κάθε πάροχος υπηρεσίας στα πλαίσια της ομοσπονδίας δεν χρειάζεται να γνωρίζει τα στοιχεία πρόσβασης (username-password) του κάθε χρήστη της κοινότητας. Αρκεί να εμπιστεύεται τον φορέα από τον οποίο προέρχεται ο χρήστης.
+<li>	τα στοιχεία που αφορούν την ταυτότητα, ιδιότητα και προέλευση του κάθε χρήστη δεν είναι απαραίτητο να μεταδίδονται στον κάθε πάροχο υπηρεσίας αφού υπάρχει δυνατότητα ανώνυμης πιστοποιημένης πρόσβασης. Σε περιπτώσεις που η παροχή συγκεκριμένης υπηρεσίας προϋποθέτει τη γνώση στοιχείων του τελικού χρήστη, το πλαίσιο της ομοσπονδίας επιβάλει την έγκριση του παρόχου ταυτότητας για την απελευθέρωση τους, ενώ ο τελικός χρήστης ενημερώνεται για τις απαιτήσεις.
+</ul>
+<p>
+	Οι παρακάτω υπηρεσίες παρέχονται μέσω της υποδομής AAI του ΕΔΕΤ:
+</p>
+<ul>
+
+<li><a href="https://downloads.channel8.msdn.com/">Υπηρεσία Microsoft DreamSpark</a>, διανομής δωρεάν λογισμικού σε φοιτητές
+<li><a href="http://anafandon.grnet.gr/">Υπηρεσία ΑΝΑΦΑΝΔΟΝ-MSDNAA</a>, διανομής δωρεάν λογισμικού σε φοιτητές μέσω προγράμματος MSDNA
+<li><a href="http://iptv.grnet.gr">Υπηρεσία IPTV</a>, μετάδοσης ψηφιακής τηλεόρασης
+<li><a href="http://rts.grnet.gr">Υπηρεσία διοργάνωσης τηλεδιασκέψεων</a> και τηλεφωνίας VoIP ( Real Time Services)
+<li><a href="http://wiki.grnet.gr">Υπηρεσία GRnet WiKi</a> που χρησιμοποιείται από τα μέλη του εικονικού κέντρου διαχείρισης Δικτύων του ΕΔΕΤ, καθώς και από συνεργάτες του ΕΔΕΤ
+<li>Υπηρεσία helpdesk.grnet.gr για την υποστήριξη του helpdesk του ΕΔΕΤ
+</ul>
+<p>
+Αυτή τη στιγμή η Ομοσπονδία ΑΑΙ του ΕΔΕΤ υλοποιείται με το λογισμικό Shibboleth και απαρτίζεται από τους παρακάτω παρόχους ταυτότητας:
+</p>
+<ul>
+
+<li><a href="http://noc.auth.gr/services/general/aai/index.html">Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης</a>
+<li>Γεωπονικό Πανεπιστήμιο Αθηνών *
+<li>Δημοκρίτειο Πανεπιστήμιο Θράκης *
+<li>Εθνικό Δίκτυο Έρευνας και Τεχνολογίας *
+<li>Εθνικό Μετσόβιο Πολυτεχνείο
+<li>Ινστιτούτο Τεχνολογίας Υπολογιστών *
+<li>Πανεπιστήμιο Αθηνών *
+<li>Πανεπιστήμιο Αιγαίου *
+<li>Πανεπιστήμιο Θεσσαλίας *
+<li>Πανεπιστήμιο Ιωαννίνων *
+<li>Πανεπιστήμιο Κρήτης *
+<li>Πανεπιστήμιο Πατρών
+<li>Πανεπιστήμιο Πελοποννήσου *
+<li>Πολυτεχνείο Κρήτης *
+<li>Τεχνολογικό Εκπαιδευτικό Ίδρυμα Αθήνας *
+<li>Τεχνολογικό Εκπαιδευτικό Ίδρυμα Κρήτης-Χανιά *
+
+<li>Τεχνολογικό Εκπαιδευτικό Ίδρυμα Μεσολογγίου *
+<li>Τεχνολογικό Εκπαιδευτικό Ίδρυμα Σερρών *
+<li>Χαροκόπειο Πανεπιστήμιο *
+</ul>
+<p>
+Για την προώθηση των ομοσπονδιακών υπηρεσιών, το ΕΔΕΤ έχει αναπτύξει πρότυπα συστήματα IdP και SP στεγαζόμενα σε εξυπηρετητές («κουτιά» υπηρεσιών), τα οποία και διαθέτει σε ιδρύματα της κοινότητας. Στην παραπάνω λίστα, με αστερίσκο εμφανίζονται τα ιδρύματα που χρησιμοποιούν εξοπλισμό του ΕΔΕΤ. Επιπλέον καταβάλλεται σημαντική προσπάθεια ώστε οι υπηρεσίες που διατίθενται είτε στο σύνολο της ακαδημαϊκής κοινότητας, είτε σε επιλεγμένους συνεργάτες να χρησιμοποιούν την υποδομή AAI της ομοσπονδίας.
+</p>
+<p>
+Ταυτόχρονα, προσφέρεται και σύνδεση με τις <a href="http://www.edugain.org">Ευρωπαϊκές Υπηρεσίες AAI του EduGain</a> που είναι υπό ανάπτυξη στα πλαίσια του ερευνητικού έργου GEANT2, ώστε τα μέλη της κοινότητας να μπορούν να απολαμβάνουν και υπηρεσίες από ευρωπαϊκούς φορείς και αντιστρόφως.
+</p>
+<p>
+        Ένα ίδρυμα μπορεί να ενταχθεί στην Ομοσπονδία AAI του ΕΔΕΤ, δρομολογώντας τα παρακάτω βήματα:
+</p>
+<ul>
+<li> ανάπτυξη έγκυρης υπηρεσίας καταλόγου LDAP και διαδικασιών συντήρησης των στοιχείων των μελών του ιδρύματος
+
+<li> υλοποίηση  σχήματος <a href="http://vnoc.grnet.gr/oldvnoc/content/downloads/GRNET%20LDAP%20schema.pdf">eduPerson</a> στην υπηρεσία καταλόγου
+<li> εγκατάσταση υποδομής ταυτοποίησης  Shibboleth IdP
+</ul>
+<p>
+        Τα παραπάνω μπορούν να διατεθούν και έτοιμα από το ΕΔΕΤ με τη μορφή ενός προσαρμοσμένου «κουτιού» υπηρεσιών. Για περισσότερες πληροφορίες μπορείτε να επικοινωνήσετε με το <a href=mailto:helpdesk@grnet.gr>helpdesk@grnet.gr</a> ή τηλεφωνικά στo 800-11-GRNET.
+</p>
+
+<p>Τεκμηρίωση:</p>
+
+<ul>
+<li><a href="http://vnoc.grnet.gr/engine/index.php?op=modload&modname=Downloads&action=downloadsviewfile&ctn=776&language=el">Γενικές αρχές προς διαχειριστές υπηρεσιών καταλόγου, ΙdP και SP για τις διαδικασίες παρoχής υπηρεσιών AAI με χρήση του Shibboleth</a></li>
+<li><a href="http://vnoc.grnet.gr/engine/index.php?op=modload&modname=Downloads&action=downloadsviewfile&ctn=855&language=el">Οδηγός εγκατάστασης και ρύθμισης Shibboleth 1.3</a></li>
+</ul>
+
+<p>Περισσότερα για το Shibboleth:<br />
+<a href="http://shibboleth.internet2.edu/">http://shibboleth.internet2.edu/</a></p>
+<p>
+Τεκμηρίωση υλοποίησης του αντίστοιχης ομοσπονδίας του Ελβετικού NREN, του Switch:<br />
+<a href="http://www.switch.ch/aai/shibboleth.html">http://www.switch.ch/aai/shibboleth.html</a></p>
+<p>Τεκμηρίωση υλοποίησης του αντίστοιχου project των ιδρυμάτων των Ηνωμένων Πολιτειών (Internet2):<br />
+
+<a
+href="http://www.incommonfederation.org">http://www.incommonfederation.org</a></p>
 {% endblock %}
