--- a/wayf/templates/index.html
+++ b/wayf/templates/index.html
@@ -22,14 +22,12 @@
 	Οι παρακάτω υπηρεσίες παρέχονται μέσω της υποδομής AAI του ΕΔΕΤ:
 </p>
 <ul>
-
-<li><a href="https://downloads.channel8.msdn.com/">Υπηρεσία Microsoft DreamSpark</a>, διανομής δωρεάν λογισμικού σε φοιτητές
-<li><a href="http://anafandon.grnet.gr/">Υπηρεσία ΑΝΑΦΑΝΔΟΝ-MSDNAA</a>, διανομής δωρεάν λογισμικού σε φοιτητές μέσω προγράμματος MSDNA
-<li><a href="http://iptv.grnet.gr">Υπηρεσία IPTV</a>, μετάδοσης ψηφιακής τηλεόρασης
-<li><a href="http://rts.grnet.gr">Υπηρεσία διοργάνωσης τηλεδιασκέψεων</a> και τηλεφωνίας VoIP ( Real Time Services)
-<li><a href="http://wiki.grnet.gr">Υπηρεσία GRnet WiKi</a> που χρησιμοποιείται από τα μέλη του εικονικού κέντρου διαχείρισης Δικτύων του ΕΔΕΤ, καθώς και από συνεργάτες του ΕΔΕΤ
-<li>Υπηρεσία helpdesk.grnet.gr για την υποστήριξη του helpdesk του ΕΔΕΤ
+<li><a href="https://downloads.channel8.msdn.com/">Υπηρεσία Microsoft DreamSpark</a>, διανομής δωρεάν λογισμικού σε φοιτητές</li>
+<li><a href="http://anafandon.grnet.gr/">Υπηρεσία ΑΝΑΦΑΝΔΟΝ-MSDNAA</a>, διανομής δωρεάν λογισμικού σε φοιτητές μέσω προγράμματος MSDNA</li>
+<li><a href="http://iptv.grnet.gr">Υπηρεσία IPTV</a>, μετάδοσης ψηφιακής τηλεόρασης</li>
+<li><a href="http://rts.grnet.gr">Υπηρεσία διοργάνωσης τηλεδιασκέψεων</a> και τηλεφωνίας VoIP ( Real Time Services)</li>
 </ul>
+
 <p>
 Αυτή τη στιγμή η Ομοσπονδία ΑΑΙ του ΕΔΕΤ υλοποιείται με το λογισμικό Shibboleth και απαρτίζεται από τους παρακάτω παρόχους ταυτότητας:
 </p>
@@ -60,7 +58,7 @@
 Για την προώθηση των ομοσπονδιακών υπηρεσιών, το ΕΔΕΤ έχει αναπτύξει πρότυπα συστήματα IdP και SP στεγαζόμενα σε εξυπηρετητές («κουτιά» υπηρεσιών), τα οποία και διαθέτει σε ιδρύματα της κοινότητας. Στην παραπάνω λίστα, με αστερίσκο εμφανίζονται τα ιδρύματα που χρησιμοποιούν εξοπλισμό του ΕΔΕΤ. Επιπλέον καταβάλλεται σημαντική προσπάθεια ώστε οι υπηρεσίες που διατίθενται είτε στο σύνολο της ακαδημαϊκής κοινότητας, είτε σε επιλεγμένους συνεργάτες να χρησιμοποιούν την υποδομή AAI της ομοσπονδίας.
 </p>
 <p>
-Ταυτόχρονα, προσφέρεται και σύνδεση με τις <a href="http://www.edugain.org">Ευρωπαϊκές Υπηρεσίες AAI του EduGain</a> που είναι υπό ανάπτυξη στα πλαίσια του ερευνητικού έργου GEANT2, ώστε τα μέλη της κοινότητας να μπορούν να απολαμβάνουν και υπηρεσίες από ευρωπαϊκούς φορείς και αντιστρόφως.
+Ταυτόχρονα, προσφέρεται και σύνδεση με τις <a href="http://www.edugain.org">Ευρωπαϊκές Υπηρεσίες AAI του eduGAIN</a> που είναι υπό ανάπτυξη στα πλαίσια του ερευνητικού έργου GEANT2, ώστε τα μέλη της κοινότητας να μπορούν να απολαμβάνουν και υπηρεσίες από ευρωπαϊκούς φορείς και αντιστρόφως.
 </p>
 <p>
         Ένα ίδρυμα μπορεί να ενταχθεί στην Ομοσπονδία AAI του ΕΔΕΤ, δρομολογώντας τα παρακάτω βήματα:
@@ -76,19 +74,11 @@
 </p>
 
 <p>Τεκμηρίωση:</p>
-
 <ul>
 <li><a href="http://vnoc.grnet.gr/engine/index.php?op=modload&modname=Downloads&action=downloadsviewfile&ctn=776&language=el">Γενικές αρχές προς διαχειριστές υπηρεσιών καταλόγου, ΙdP και SP για τις διαδικασίες παρoχής υπηρεσιών AAI με χρήση του Shibboleth</a></li>
 <li><a href="http://vnoc.grnet.gr/engine/index.php?op=modload&modname=Downloads&action=downloadsviewfile&ctn=855&language=el">Οδηγός εγκατάστασης και ρύθμισης Shibboleth 1.3</a></li>
+<li><a href="http://shibboleth.internet2.edu/">Περισσότερα για το Shibboleth:</a></li>
+<li><a href="http://www.switch.ch/aai/shibboleth.html">Τεκμηρίωση υλοποίησης του αντίστοιχης ομοσπονδίας του Ελβετικού NREN (SWITCH)</a></li>
+<li><a href="http://www.incommonfederation.org">http://www.incommonfederation.orgΤεκμηρίωση υλοποίησης του αντίστοιχου project των ιδρυμάτων των Ηνωμένων Πολιτειών (Internet2)</a></li>
 </ul>
-
-<p>Περισσότερα για το Shibboleth:<br />
-<a href="http://shibboleth.internet2.edu/">http://shibboleth.internet2.edu/</a></p>
-<p>
-Τεκμηρίωση υλοποίησης του αντίστοιχης ομοσπονδίας του Ελβετικού NREN, του Switch:<br />
-<a href="http://www.switch.ch/aai/shibboleth.html">http://www.switch.ch/aai/shibboleth.html</a></p>
-<p>Τεκμηρίωση υλοποίησης του αντίστοιχου project των ιδρυμάτων των Ηνωμένων Πολιτειών (Internet2):<br />
-
-<a
-href="http://www.incommonfederation.org">http://www.incommonfederation.org</a></p>
 {% endblock %}
