--- a/wayf/templates/base.html
+++ b/wayf/templates/base.html
@@ -64,8 +64,8 @@
 										<td valign="top"><a href="http://www.grnet.gr" target="_blank"><img src="/static/images/grnet.gif" border="0" width="85" height="94" alt="GRNET" title="GRNET"></a></td>
 										<td width="100%" valign="top">
 											<table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
-												<tr><td height="100%" valign="top" bgcolor="#D6D3D3"><div class="greyheader"><a style="text-decoration:none" href="/">{% trans "GRNET Federation,<br />Authentication & Authorization Infrastructure" %}</a></div></td></tr>
-												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="/support">{% trans "User support" %}</a> ::<a href="/faq">{% trans "FAQ" %}</a> ::<a href="/help">{% trans "Help" %}</a> ::<a href="/privacy">{% trans "Privacy" %}</a></div></td></tr>
+												<tr><td height="100%" valign="top" bgcolor="#D6D3D3"><div class="greyheader"><a style="text-decoration:none" href="/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a></div></td></tr>
+												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="/support">{% trans "User support" %}</a> :: <a href="/faq">{% trans "FAQ" %}</a> :: <a href="/help">{% trans "Help" %}</a> :: <a href="/privacy">{% trans "Privacy" %}</a></div></td></tr>
 											</table>
 										</td>
 									</tr>
