--- a/wayf/templates/wayf.html
+++ b/wayf/templates/wayf.html
@@ -5,14 +5,11 @@
 <p>On this page you can set a default Home Organization for this web browser. Setting a default Home Organization will henceforth redirect you directly to your Home Organization when you access AAI-Resources. Don't use this feature if you use several AAI accounts.</p>
 <form method="post" action="/wayf/set">
 	<select name="user_idp">
-	{% for category, insts in  idplist %}
-		<optgroup label="{{ category }}">
-		{% for inst in insts %}
-			<option value="{{ inst.id }}">{{ inst.name }}</option>
-		{% endfor %}
-		</optgroup>
-	{% endfor %}
+	{% include "idp_dropdown.html" %}
 	</select>
+	{% if request.GET %}
+	<input type="hidden" name='queryString' value="{{ request.GET.urlencode }" />
+	{% endif %}
 	<input type="submit" value="{% trans "Save Selection" %}" />
 </form>
 {% endblock %}
