Cleaned up the wayf views Added a 404 handler

--- a/wayf/templates/wayf_set.html
+++ b/wayf/templates/wayf_set.html
@@ -11,6 +11,7 @@ The default setting is:
 <div align="center">
 <h4>{{ currentidp }}</h4>
 <form action="/wayf/unset" method="post">
+	<input type="hidden" name="clear" value="true" />
 	<input type="submit" value="{% trans "Clear" %}" />
 </form>
 </div>
