--- a/wayf/templates/idp_dropdown.html
+++ b/wayf/templates/idp_dropdown.html
@@ -1,7 +1,11 @@
 	{% for category, insts in  idplist %}
 		<optgroup label="{{ category }}">
 		{% for inst in insts %}
+			{% ifequal inst.id selected.id %}
+			<option value="{{ inst.id }}" selected="true">{{ inst.name }}</option>
+			{% else %}
 			<option value="{{ inst.id }}">{{ inst.name }}</option>
+			{% endifequal %}
 		{% endfor %}
 		</optgroup>
 	{% endfor %}
