--- a/wayf/templates/wayf.html
+++ b/wayf/templates/wayf.html
@@ -3,7 +3,7 @@
 {% block header %}{% trans "Permanently set your Home Organization" %}{% endblock %}
 {% block content %}
 <p>On this page you can set a default Home Organization for this web browser. Setting a default Home Organization will henceforth redirect you directly to your Home Organization when you access AAI-Resources. Don't use this feature if you use several AAI accounts.</p>
-<form method="post" action="/wayf/set">
+<form method="post" action="{{ request.path }}">
 	<select name="user_idp">
 	{% include "idp_dropdown.html" %}
 	</select>
