Minor changes to templates

--- a/wayf/templates/faq.html
+++ b/wayf/templates/faq.html
@@ -3,11 +3,11 @@
 {% block header %}{% trans "FAQ" %}{% endblock %}
 {% block content %}
 <ul>
-<li><b>Δεν μπορώ να κάνω login ή ξέχασα το password μου . Ποιός μπορεί να με βοηθήσει;</b>
-<br>Εφόσον το ίδρυμά σας αναφέρεται στη λίστα συνεργαζόμενων ιδρυμάτων, μπορείτε να απευθυνθείτε στο helpdesk του ιδρύματός σας. Εκεί μπορείτε να αντιμετωπίσετε τυχόν πρόβλημα στον ιδρυματικό σας λογαριασμό. Αν δεν βρεθεί πρόβλημα στον λογαριασμό, τότε θα πρέπει να επικοινωνήσετε με τον πάροχο της υπηρεσίας που θέλετε να χρησιμοποιήσετε.
-<li><b>Ποιές υπηρεσίες μπορώ να χρησιμοποιήσω μέσω της υποδομής ΑΑΙ του ΕΔΕΤ;</b>
-<br>    Δείτε την σελίδα <a href="http://shibboleth.grnet.gr.">http://shibboleth.grnet.gr</a>
-<li><b>Τί πρέπει να κάνω για να αποκτήσω λογαριασμό κατάλληλο για την υποδομή AAI;</b>
-
-<br>    Εφόσον το ίδρυμά σας είναι ενταγμένο στην υποδομή AAI, και έχει συνδέσει τους λογαριασμούς των χρηστών του με αυτή, τότε δεν θα χρειαστεί να κάνετε κάποια ενέργεια. Οι κωδικοί username και password είναι οι ίδιοι που ισχύουν και για τις υπόλοιπες χρήσεις στο ίδρυμά σας.
+<li><b>I cannot log in or I forgot my password. Who can help me?</b>
+<br />If your Home Organization is listed among the GRNET's federated organizations, then you can contact your Home Organization's helpdesk, where you can be assisted regarding your personal account. If no problem with your account is found, then you will have to contact the administrators of the service you are trying to access.</li>
+<li><b>What are the available AAI-enabled services of GRNET's Federation?</b>
+<br />The available services are listed in <a href="http://aai.grnet.gr">aai.grnet.gr</a>.</li>
+<li><b>What should I do to create an account suitable for use with GRNET's AAI federation?</b>
+<br>If your Home Organization is already a part of and has connected its users' accounts with GRNET's AAI federation, then no action is necessary from your part. Your username and password are those used for your Home Organization's services.</li>
+</ul>
 {% endblock %}
