--- a/wayf/templates/wayf.html
+++ b/wayf/templates/wayf.html
@@ -2,16 +2,15 @@
 {% load i18n %}
 {% block header %}{% trans "Permanently set your Home Organization" %}{% endblock %}
 {% block content %}
-<p>On this page you can set a default Home Organization for this web browser. Setting a default Home Organization will henceforth redirect you directly to your Home Organization when you access AAI-Resources. Don't use this feature if you use several AAI accounts.</p>
-<form method="post" action="{{ request.path }}">
+<p>On this page you can set a default Home Organization for this web browser. Setting a default Home Organization will henceforth redirect you directly to your Home Organization when you access AAI-enabled resources. Don't use this feature if you use several AAI accounts.</p>
+<div id="idpform">
+<form method="post">
 	<select name="user_idp">
 	{% include "idp_dropdown.html" %}
 	</select>
-	{% if request.GET %}
-	<input type="hidden" name='queryString' value="{{ request.GET.urlencode }" />
-	{% endif %}
+	<input type="submit" value="{% trans "Confirm" %}" /><br />
 	<input type="hidden" name="save" value="true" />
 	<input type="hidden" name="savetype" value="perm" />
-	<input type="submit" value="{% trans "Save Selection" %}" />
 </form>
+</div>
 {% endblock %}
