Added more translations

--- a/wayf/templates/el/index.html
+++ b/wayf/templates/el/index.html
@@ -99,7 +99,7 @@ href="http://www.edugain.org">Ευρωπαϊκές Υπηρεσίες AAI του
 Τα παραπάνω μπορούν να διατεθούν και έτοιμα από το ΕΔΕΤ με τη μορφή ενός
 προσαρμοσμένου «κουτιού» υπηρεσιών. Για περισσότερες πληροφορίες μπορείτε να
 επικοινωνήσετε με το <a href=mailto:helpdesk@grnet.gr>helpdesk@grnet.gr</a> ή
-τηλεφωνικά στo 800-11-GRNET.
+τηλεφωνικά στo 800-11-GRNET (800-11-47638).
 </p>
 
 <p>
@@ -107,9 +107,9 @@ href="http://www.edugain.org">Ευρωπαϊκές Υπηρεσίες AAI του
 <ul>
 <li><a href="http://vnoc.grnet.gr/engine/index.php?op=modload&modname=Downloads&action=downloadsviewfile&ctn=776&language=el">Γενικές αρχές προς διαχειριστές υπηρεσιών καταλόγου, ΙdP και SP για τις διαδικασίες παρoχής υπηρεσιών AAI με χρήση του Shibboleth</a></li>
 <li><a href="http://vnoc.grnet.gr/engine/index.php?op=modload&modname=Downloads&action=downloadsviewfile&ctn=855&language=el">Οδηγός εγκατάστασης και ρύθμισης Shibboleth 1.3</a></li>
-<li><a href="http://shibboleth.internet2.edu/">Περισσότερα για το Shibboleth:</a></li>
+<li><a href="http://shibboleth.internet2.edu/">Λογισμικό Shibboleth</a></li>
 <li><a href="http://www.switch.ch/aai/shibboleth.html">Τεκμηρίωση υλοποίησης του αντίστοιχης ομοσπονδίας του Ελβετικού NREN (SWITCH)</a></li>
-<li><a href="http://www.incommonfederation.org">http://www.incommonfederation.orgΤεκμηρίωση υλοποίησης του αντίστοιχου project των ιδρυμάτων των Ηνωμένων Πολιτειών (Internet2)</a></li>
+<li><a href="http://www.incommonfederation.org">Τεκμηρίωση υλοποίησης του αντίστοιχου project των ιδρυμάτων των Ηνωμένων Πολιτειών (Internet2)</a></li>
 </ul>
 </p>
 
