--- a/wayf/templates/en-us/privacy.html
+++ b/wayf/templates/en-us/privacy.html
@@ -3,36 +3,33 @@
 {% block header %}{% trans "Privacy" %}{% endblock %}
 {% block content %}
 <p>
-Η χρήση των υπηρεσιών της Ομοσπονδίας AAI του ΕΔΕΤ, γίνεται πάντα μέσω ενός
-λογαριασμού πρόσβασης που διαθέτει ο χρήστης σε Οργανισμό-μέλος της
-Ομοσπονδίας.
+The use of the services provided over GRNET's AAI Federation requires an
+account in an institution that is member of the Federation.
 </p>
 <p>
-Κάθε Οργανισμός-μέλος της Ομοσπονδίας έχει υποχρέωση να προφυλάσει τα προσωπικά
-δεδομένα των παραπάνω λογαριασμών από μη εξουσιοδοτημένη πρόσβαση.
+Every Organization belonging to the Federation is required to safeguard the
+privacy of the credentials accompanying these accounts from unauthorized
+access.
 </p>
 <p>
-Οι Οργανισμοί-μέλη που τηρούν λογαριασμούς πρόσβασης χρηστών, μετά από
-προσωπική παρέμβαση του χρήστη και μόνο, σε κατάλληλη ιστοσελίδα τους, παρέχουν
-ένα ελάχιστο απαιτούμενο απόσπασμα από τα προσωπικά δεδομένα του χρήστη σε
-συστήματα υπηρεσιών άλλων μελών της Ομοσπονδίας, προκειμένου ο χρήστης να
-αποκτήσει πρόσβαση σε αυτές.
+The federated organizations providing user accounts disclose only the minimal
+required fragment of the account holders' credentials and only with the
+account holders' prior consent, acquired by means of a special informational
+web page presented to the account holder.
 </p>
 <p>
-Τα διάφορα συστήματα υπηρεσιών της Ομοσπονδίας, δεν απαιτούν ούτε χρησιμοποιούν
-προσωπικά στοιχεία του χρήστη τα οποία δεν είναι απαραίτητα για την λειτουργία
-τους.
+All services provided as part of the Federation do not require nor use
+personal credentials other than those required for the service's operation.
 </p>
 <p>
-Το ΕΔΕΤ και η Ομοσπονδία ΑΑΙ του ΕΔΕΤ σαν σύνολο, δεν είναι υπεύθυνη για την
-τήρηση των παραπάνω υποχρεώσεων των μελών. Το ΕΔΕΤ και η Ομοσπονδία σαν σύνολο,
-δεν διακινεί ούτε φυλάσσει δεδομένα των χρηστών. Η Ομοσπονδία απλά περιγράφει
-ασφαλείς τρόπους ανταλλαγής δεδομένων ανάμεσα στα συμβαλόμενα μέλη της, πάντα
-με την εντολή του ενδιαφερόμενου χρήστη. 
+GRNET and GRNET's AAI Federation as a whole cannot be held responsible for the
+fulfilment of the above requirements on behalf of the Federation Members.
+GRNET and the Federation as a whole does not store nor transmit account data,
+it mereley describes safe ways of information exchange between the
+Federation's Members with the involved user's consent.
 </p>
 <p>
-Η Ομοσπονδία λειτουργεί μέσα στα πλαίσια του νόμου περί προστασίας προσωπικών
-δεδομένων. Οι συμμετέχοντες οργανισμοί στην Ομοσπονδία λειτουργούν υπό τα ίδια
-πλαίσια.
+The Federation and its Members operate according to the laws concerning the protection of
+private data.
 </p>
 {% endblock %}
