--- a/wayf/templates/base.html
+++ b/wayf/templates/base.html
@@ -65,7 +65,7 @@
 										<td width="100%" valign="top">
 											<table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
 												<tr><td height="100%" valign="top" bgcolor="#D6D3D3"><div class="greyheader"><a style="text-decoration:none" href="/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a></div></td></tr>
-												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="/faq">{% trans "FAQ" %}</a> :: <a href="/help">{% trans "Help" %}</a> :: <a href="/privacy">{% trans "Privacy" %}</a></div></td></tr>
+												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="http://wayf.grnet.gr/">{% trans "Select your home institution" %}</a> :: <a href="/faq">{% trans "FAQ" %}</a> :: <a href="/help">{% trans "Help" %}</a> :: <a href="/privacy">{% trans "Privacy" %}</a></div></td></tr>
 											</table>
 										</td>
 									</tr>
@@ -85,6 +85,16 @@
 <div class="rbbot"><div></div></div>
 </div><!-- /rbroundbox -->
 <tr><td class="break">&nbsp;</td></tr>
+
+<table border="0" cellpadding="1" cellspacing="0">
+	<tr>
+		<td valign="top" width="14"><img src="static/images/arrow-12.gif" width="12" height="12" alt="arrow"></td>
+		<td valign="top">
+			<p class="footer">{% trans "The Greek Research and Technology Network (GRNET) provides the Hellenic Academic, Research and Education community with advanced services, high-capacity national and international Internet connectivity, assisting the operation of all Universities, Technologial Educational Institutions and Research Institutes in Greece."%}</p>
+		</td>
+	</tr>
+</table>
+
 </td></tr>
 </td>
 </tr>
