Added language selection

--- a/wayf/templates/base.html
+++ b/wayf/templates/base.html
@@ -29,8 +29,8 @@
 			<tbody>
 				<tr>
 					<td><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td>
-					<td id="corner_white_on_grey_topx--"><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td>
-					<td rowspan="2" class="pageContents"><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td>
+					<td id="corner_white_on_grey_topx--"><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider" /><a href="/setlanguage/el">Ελληνικά</a> | <a href="/setlanguage/en">English</a></td>
+					<td rowspan="2" class="pageContents"><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider" /></td>
 				</tr>
 				<tr>
 					<td ><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td>
