Various stylesheet modifications

--- a/static/style.css
+++ b/static/style.css
@@ -1,44 +1,45 @@
-body{
+body {
 	background-color: #B2B2B2;
 	font-size:100%;
 	
 }
-body, td{
+body, td {
 	font-family: Arial, Verdana, Helvetica, sans-serif;
 	color:#656565;
 	text-align:justify;
 }
-td{
-	font-size:0.7em;
+td {
+	font-size: 70%;
 }
 
-h6{
-	font-size:13px;
+h6 {
+	font-size: 130%;
 	color:#333333;
 	font-weight:bold;
 	margin:0em;
 	padding:0em;
 }
-.holdingTable{
+.holdingTable {
 	vertical-align:top;
 	text-align:left;
-	width:100%;
+	width: 100%;
 }
-.BGEb{
+.BGEb {
 	background-repeat: repeat;
 	background-position: left top;
-	width:50%;
+	width: 50%;
 }
 
-#topStrip{
-	height:30px;
+#topStrip {
+	height: 30px;
 }
 
-.collapse{
-	width:1px;
-	height:1px;
-	}
-#corner_grey_on_white_topx--{
+.collapse {
+	width: 1px;
+	height: 1px;
+}
+
+#corner_grey_on_white_topx-- {
 	width:7px;
 	height:7px;
 	background-image:url(images/topx--.gif);
@@ -47,7 +48,7 @@ h6{
 	background-color:#B2B2B2;
 }
 
-#corner_grey_on_white_top--x{
+#corner_grey_on_white_top--x {
 	width:7px;
 	height:7px;
 	background-image:url(images/top--x.gif);
@@ -56,7 +57,7 @@ h6{
 	background-color:#B2B2B2;
 }
 
-#corner_grey_on_white_bottomx--{
+#corner_grey_on_white_bottomx-- {
 	width:7px;
 	height:7px;
 	background-image:url(images/bottomx--.gif);
@@ -65,7 +66,7 @@ h6{
 	background-color:#B2B2B2;
 }
 
-#corner_grey_on_white_bottom--x{
+#corner_grey_on_white_bottom--x {
 	width:7px;
 	height:7px;
 	background-image:url(images/bottom--x.gif);
@@ -75,16 +76,17 @@ h6{
 }
 
 
-#corner_white_on_grey_topx--{
-	width:7px;
+#corner_white_on_grey_topx-- {
+	/*width:7px; */
 	height:7px;
 	background-image:url(images/topx--.gif);
 	background-position:top left;
 	background-repeat:no-repeat;
 	background-color:white;
+	text-align: center;
 }
 
-#corner_white_on_grey_top--x{
+#corner_white_on_grey_top--x {
 	width:7px;
 	height:7px;
 	background-image:url(images/top--x.gif);
@@ -93,7 +95,7 @@ h6{
 	background-color:white;
 }
 
-#corner_white_on_grey_bottomx--{
+#corner_white_on_grey_bottomx-- {
 	width:7px;
 	height:7px;
 	background-image:url(images/bottomx--.gif);
@@ -102,7 +104,7 @@ h6{
 	background-color:white;
 }
 
-#corner_white_on_grey_bottom--x{
+#corner_white_on_grey_bottom--x {
 	width:7px;
 	height:7px;
 	background-image:url(images/bottom--x.gif);
@@ -110,85 +112,84 @@ h6{
 	background-repeat:no-repeat;
 	background-color:white;
 }
-.pageContents{
+.pageContents {
 	background-color: white;
 }
 .pageContents{
 
 }
-.bluebox
-	{
-		border-width: 1;
-		border-color: #CCCCCC;
-		background-color: #F0F0F0;
-		border-style: solid;
-		padding: 3px;
-		padding-left:26px;
-		color: #656161;
-		font-size:12px;
-	}
-.greyheader
-	{
-		background-color: #D6D3D3;
-		padding-left:20px;
-		padding-top:20px;
-		font-size:20px;
-		color:#5A5A7D;
-	}
-.greysmallheader
-	{
-		background-color: #F0F0F0;
-		border-top:1px solid #B2B2B2;
-		border-bottom:1px solid #B2B2B2;
-		width:100%;
-		font-size:11px;
-		color:#5A5A7D;
-		text-align:right;
-	}
-#subFooterSpacer{
-	height:3px;
-	}
-#subFooter{}
-#subFooter* a:link, #subFooter* a:visited{
-	color:#666666;
-	}
-#subFooter* a:hover{
-	color:#E4E4E4;
-	}
-#subFooter td{
-	color:#FFFFFF;
-	}
+.bluebox {
+	border-width: 1;
+	border-color: #CCCCCC;
+	background-color: #F0F0F0;
+	border-style: solid;
+	padding: 3px;
+	padding-left:26px;
+	color: #656161;
+	font-size: 120%;
+}
+.greyheader {
+	background-color: #D6D3D3;
+	padding-left:20px;
+	padding-top:20px;
+	font-size: 180%;
+	color:#5A5A7D;
+}
+.greysmallheader {
+	background-color: #F0F0F0;
+	border-top:1px solid #B2B2B2;
+	border-bottom:1px solid #B2B2B2;
+	width:100%;
+	font-size: 100%;
+	color:#5A5A7D;
+	text-align:right;
+}
 
-a{
-	color:#666666;
+#subFooterSpacer {
+	height:3px;
+}
+#subFooter {}
+#subFooter* a:link, #subFooter* a:visited {
+		color:#666666;
+}
+#subFooter* a:hover {
+	color:#E4E4E4;
+}
+#subFooter td {
+	color:#FFFFFF;
+}
+
+a {
+	color: #666666;
 	text-decoration: none;
 }
-a:visited{
-	color:#666666;
+a:visited {
+	color: #666666;
 	text-decoration: underline;
 }
-a:hover{
-		 color:#5A5A7D;
+a:hover {
+	color: #5A5A7D;
 	text-decoration: underline;
 }
 
-tt{
-font-family: Arial, Verdana, Helvetica, sans-serif;
-color:#4e85da;
-font-size: 9px;
-border-top:1px solid c
-border-bottom:1px solid #e4e4e4;
+tt {
+	color:#4e85da;
+	font-size: 90%;
+	border-top: 10% solid c
+	border-bottom: 10% solid #e4e4e4;
 }
-tt:hover{
-background-color:#e4e4e4;
-color: #ee9800;
+
+tt:hover {
+	background-color:#e4e4e4;
+	color: #ee9800;
 }
-.switchaai{
-font-size:9px;
- font-style:italic;
+
+.footer {
+	font-size: 90%;
+	font-style: italic;
+	padding-right: 2em;
 }
 
 td.break{
-	border-bottom:1px solid  #e4e4e4;
+	border-bottom: 10% solid  #e4e4e4;
 }
-
